fixed layout on mobile

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   min-height: 100vh;
   width: 100vw;
@@ -68,6 +72,7 @@ input {
 }
 
 header {
+  width: 100vw;
   height: 130px;
   transition: box-shadow 0.3s linear;
   position: relative;
@@ -251,20 +256,6 @@ header.scrolled {
   padding-top: 150px;
 }
 
-.banner::before {
-  content: "";
-  background-image: url("../images/bg-tablet-pattern.svg");
-  background-repeat: no-repeat;
-  background-position: right 0;
-  background-size: contain;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: -1;
-  width: 100%;
-  height: 600px;
-}
-
 .banner img {
   max-width: 100%;
 }
@@ -316,16 +307,6 @@ header.scrolled {
 .proof {
   margin-top: 200px;
   position: relative;
-}
-
-.proof::after {
-  position: absolute;
-  content: url("../images/bg-tablet-pattern.svg");
-  max-width: 50%;
-  height: 200px;
-  z-index: -1;
-  left: 0;
-  bottom: 0;
 }
 
 .proof .item1 h2 {
