--- a/Sass/_bannerSection.scss
+++ b/Sass/_bannerSection.scss
@@ -1,18 +1,6 @@
 .banner {
   padding-top: 150px;
-  &::before {
-    content: "";
-    background-image: url("../images/bg-tablet-pattern.svg");
-    background-repeat: no-repeat;
-    background-position: right 0;
-    background-size: contain;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: -1;
-    width: 100%;
-    height: 600px;
-  }
+
   img {
     max-width: 100%;
   }
