--- a/Sass/_header.scss
+++ b/Sass/_header.scss
@@ -15,6 +15,7 @@
 
 // HEADER
 header {
+  width: 100vw;
   height: 130px;
   transition: box-shadow 0.3s linear;
   position: relative;
