--- a/Sass/_proofSection.scss
+++ b/Sass/_proofSection.scss
@@ -2,18 +2,6 @@
   margin-top: 200px;
   position: relative;
 
-  &::after {
-    position: absolute;
-    content: url("../images/bg-tablet-pattern.svg");
-    // background: url("../images/bg-tablet-pattern.svg");
-    // background-repeat: no-repeat;
-    max-width: 50%;
-    height: 200px;
-    z-index: -1;
-    left: 0;
-    bottom: 0;
-    // transform: translateX(-50%);
-  }
   .item1 {
     h2 {
       margin-bottom: 30px;
