--- a/Sass/_resetsAndVariables.scss
+++ b/Sass/_resetsAndVariables.scss
@@ -15,6 +15,10 @@ $verylightGrey: hsl(0, 0%, 98%);
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   min-height: 100vh;
   width: 100vw;
